# Auto-Fish

./: README.md  fish.py  fish.spec  pyproject.toml  requirements.txt
